--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -96,6 +96,7 @@
   position:fixed;
   top:0;
   width:100%;
+  z-index: 9;
 }
 
 .navbar-lewagon-white {
