--- a/app/assets/stylesheets/pages/_itinerariesDashboard.scss
+++ b/app/assets/stylesheets/pages/_itinerariesDashboard.scss
@@ -121,7 +121,15 @@
 }
 
 .container-dashbox-page{
-  width:80%;
-  margin: 0 auto;
-  border:2px red solid;
+  width:80vw;
+  height: 80vw;
+  margin-top: 150px;
+  margin-bottom: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  // border:2px red solid;
+}
+
+.no_border {
+  border: none;
 }
